--- a/plugin.yml
+++ b/plugin.yml
@@ -1,9 +1,9 @@
 name: BedWars
 main: BedWars\BedWars
-version: 1.0.0
-api: 1.12.0
+version: 1.0
+api: 1.13.0
 load: STARTUP
-author: MrGenga
+author: RAgnok123
 description: BedWars MiniGame
 commands:
  bw:
