--- a/resources/config.yml
+++ b/resources/config.yml
@@ -95,22 +95,22 @@ spawners:
   g: 20
 teams:
  names:
-  white: "Белые"
-  orange: "Оранжевые"
-  magenta: "Пурпурные"
-  lightBlue: "Светло-синие"
-  yellow: "Желтые"
-  lime: "Лаймовые"
-  pink: "Розовые"
-  gray: "Серые"
-  silver: "Серебристые"
-  cyan: "Голубые"
-  purple: "Фиолетовые"
-  blue: "Синие"
-  brown: "Коричневые"
-  green: "Зеленые"
-  red: "Красные"
-  black: "Черные"
+  white: "White"
+  orange: "Orange"
+  magenta: "Magenta"
+  lightBlue: "Light-Blue"
+  yellow: "Yellow"
+  lime: "Lime"
+  pink: "Pink"
+  gray: "Gray"
+  silver: "Silver"
+  cyan: "Cyan"
+  purple: "Purple"
+  blue: "Blue"
+  brown: "Brown"
+  green: "Green"
+  red: "Red"
+  black: "Black"
  colors:
   white: "§f"
   orange: "§2"
