--- a/resources/messages.yml
+++ b/resources/messages.yml
@@ -1,87 +1,89 @@
 time:
  zalush:
   seconds:
-   0: "секунд"
-   1: "секунду"
-   2: "секунды"
-   3: "секунды"
-   4: "секунды"
-   5: "секунд"
-   6: "секунд"
-   7: "секунд"
-   8: "секунд"
-   9: "секунд"
+   0: "S"
+   1: "S"
+   2: "S"
+   3: "S"
+   4: "S"
+   5: "S"
+   6: "S"
+   7: "S"
+   8: "S"
+   9: "S"
   minutes:
-   0: "минут"
-   1: "минуту"
-   2: "минуты"
-   3: "минуты"
-   4: "минуты"
-   5: "минут"
-   6: "минут"
-   7: "минут"
-   8: "минут"
-   9: "минут"
+   0: "M"
+   1: "M"
+   2: "M"
+   3: "M"
+   4: "M"
+   5: "M"
+   6: "M"
+   7: "M"
+   8: "M"
+   9: "M"
   hours:
-   0: "часов"
-   1: "час"
-   2: "часа"
-   3: "часа"
-   4: "часа"
-   5: "часов"
-   6: "часов"
-   7: "часов"
-   8: "часов"
-   9: "часов"
+   0: "H"
+   1: "H"
+   2: "H"
+   3: "H"
+   4: "H"
+   5: "H"
+   6: "H"
+   7: "H"
+   8: "H"
+   9: "H"
 bedwars:
  lobby:
-  select_map: "Мы будем играть на карте %s"
-  select_map_author: "Мы будем играть на карте %s. Автор карты - %s"
-  start_at: "Игра начнется через %s"
-  for_play: "Чтобы принять участие в игре, выбирете за какую команду вы будете играть. Чтобы сделать выбор, тапните по жителю"
-  for_start: "Чтобы начать игру прямо сейчас, введите команду /bwvote"
+  select_map: "Map %s"
+  select_map_author: "Map %s. Map author - %s"
+  start_at: "Game starts at %s"
+  for_play: "For playingyou must choose team. To choose, please, tap on villager"
+  for_start: "For playing now type in chat: /bwvote"
+  for_vote_map: "For choosing a map tap again on villager"
+  map_list: "Maps:"
  start:
-  info: "Игра началась!"
+  info: "Game started!"
  stop:
-  loose: "Вы проиграли окончательно!"
+  loose: "You lost!"
  team:
-  destroyed: "Кровать команды %s уничтожена!"
-  terminated: "Команда %s уничтожена!"
-  win: "Команда %s победила!"
-  joined: "%s зашел за вашу команду"
-  quited: "%s вышел из вашей команды"
-  partners: "Игроки вашей команды: %s"
+  destroyed: "Bed of team %s destroyed!"
+  terminated: "Team %s destroyed!"
+  win: "Team %s won!"
+  joined: "%s joined your team"
+  quited: "%s leaved your team"
+  partners: "Players of your team: %s"
  buy:
-  inv_full: "Ваш инвентарь полный!"
-  no_money: "Недостаточно ресурсов"
-  shop: "Житель"
+  inv_full: "Your inventory is full!"
+  no_money: "You dont have money"
+  shop: "Villager"
  spawner:
   title:
-   b: "Бронза"
-   i: "Железо"
-   g: "Золото"
+   b: "Bronze"
+   i: "Iron"
+   g: "Gold"
  sayall:
   prefix: "*"
-  tosay: "В игре действует командный чат. Если вы хотите сказать сообщение всем, то перед сообщением напишите %s."
+  tosay: "In game is team chat. If you want say public, type before message %s."
 bw:
  usage: "/bw"
- description: "Телепротирует вас в лобби"
- permission: "Вы не имеете права использовать эту команду"
- nouse: "Вы не можете использовать эту команду здесь!"
+ description: "Teleports you to lobby"
+ permission: "You dont have permission"
+ nouse: "You cant here!"
 bwvote:
  usage: "/bwvote"
- description: "Проголосовать за начало игры сейчас"
- permission: "Вы не имеете права использовать эту команду"
- used: "Вы уже проголосовали!"
- nouse: "Вы не можете голосовать здесь!"
- notime: "Игра уже идет!"
+ description: "Vote for force start"
+ permission: "You dont have permission"
+ used: "You already voted!"
+ nouse: "You cant here!"
+ notime: "Game already running!"
 bwstart:
  usage: "/bwstart"
- description: "Начать игру сейчас"
- permission: "Вы не имеете права использовать эту команду"
- notime: "Игра уже идет!"
+ description: "Starts game now"
+ permission: "You cant non-op"
+ notime: "Already running!"
 bwstop:
  usage: "/bwstop"
- description: "Остановить игру"
- permission: "Вы не имеете права использовать эту команду"
- notime: "Игра сейчас не идет!"
+ description: "Stop"
+ permission: "You cant non-op"
+ notime: "Game sucesfull stopped!"
