--- a/resources/message_CN.yml
+++ b/resources/message_CN.yml
@@ -36,54 +36,54 @@ hours:
 bedwars: 
 lobby: 
 select_map: "地图: %s" 
-select_map_author: "地图: %s.  - %s" 
-start_at: "Game starts at %s" 
-for_play: "For playingyou must choose team. To choose, please, tap on villager" 
-for_start: "For playing now type in chat: /bwvote" 
-for_vote_map: "For choosing a map tap again on villager" 
-map_list: "Maps:" 
+select_map_author: "地图: %s. 作者 - %s" 
+start_at: "游戏开始于 %s" 
+for_play: "为了玩游戏，你必须选择团队. 要选择，请点击村民" 
+for_start: "为了玩这个游戏，现在输入命令在聊天室: /bwvote" 
+for_vote_map: "要选择地图，请再次点击村民" 
+map_list: "地图:" 
 start: 
-info: "Game started!" 
+info: "游戏开始!" 
 stop: 
-loose: "You lost!" 
+loose: "你输了!" 
 team: 
-destroyed: "Bed of team %s destroyed!" 
-terminated: "Team %s destroyed!" 
-win: "Team %s won!" 
-joined: "%s joined your team" 
-quited: "%s leaved your team" 
-partners: "Players of your team: %s" 
+destroyed: "团队 %s 的床已经被毁了!" 
+terminated: "团队 %s 被毁!" 
+win: "团队 %s 赢得了比赛!" 
+joined: "%s 加入您的团队" 
+quited: "%s 离开你的团队" 
+partners: "你的团队的队员: %s" 
 buy: 
-inv_full: "Your inventory is full!" 
-no_money: "You dont have money" 
-shop: "Villager" 
+inv_full: "您的包已满!" 
+no_money: "你没有钱" 
+shop: "村民" 
 spawner: 
 title: 
-b: "Bronze" 
-i: "Iron" 
-g: "Gold" 
+b: "青铜" 
+i: "铁" 
+g: "金" 
 sayall: 
 prefix: "*" 
-tosay: "In game is team chat. If you want say public, type before message %s." 
+tosay: "在游戏中是团队聊天. 如果你想对公众说, 在消息前输入 %s." 
 bw: 
 usage: "/bw" 
-description: "Teleports you to lobby" 
-permission: "You dont have permission" 
-nouse: "You cant here!" 
+description: "将您传送到大堂" 
+permission: "你没有权限" 
+nouse: "你不能用在这里!" 
 bwvote: 
 usage: "/bwvote" 
-description: "Vote for force start" 
-permission: "You dont have permission" 
-used: "You already voted!" 
-nouse: "You cant here!" 
-notime: "Game already running!" 
+description: "投票强制启动" 
+permission: "你没有权限" 
+used: "您已投票!" 
+nouse: "你不能在这里使用这个命令!" 
+notime: "游戏已经运行!" 
 bwstart: 
 usage: "/bwstart" 
-description: "Starts game now" 
-permission: "You cant non-op" 
-notime: "Already running!" 
+description: "现在开始游戏" 
+permission: "您是非运营商" 
+notime: "已经运行!" 
 bwstop: 
 usage: "/bwstop" 
-description: "Stop" 
-permission: "You cant non-op" 
-notime: "Game sucesfull stopped!" 
+description: "停止" 
+permission: "您是非运营商" 
+notime: "游戏成功停止!" 
