--- a/resources/config.yml
+++ b/resources/config.yml
@@ -1,7 +1,7 @@
 general:
  teambalance: 1
  limitteams: "auto"
- language: "rus"
+ language: "eng"
 buys:
  - icon: 311
    data:
@@ -95,9 +95,9 @@ spawners:
   g: 20
 teams:
  names:
-  white: "白"
-  orange: "橙"
-  magenta: "品红"
+  white: "White"
+  orange: "Orange"
+  magenta: "Magenta"
   lightBlue: "Light-Blue"
   yellow: "Yellow"
   lime: "Lime"
